@@ -1,3 +1,6 @@
+* unreleased - Marek Jędryka <jedryka89@gmail.com> - v2.7.2
+    - Polish translation improved
+
 * Thu Apr 17 2014 - Marek Jędryka <jedryka89@gmail.com> - v2.7.1
     - fixed translating of Gradient Effect widgets
     - fixed initialization of Gradient Effect
